[package]
name = "mem2"
version = "1.0.2"
authors = ["Luciano Furlan <Luciano.Bestia@gmail.com>"]
edition = "2018"
description = "Learning Rust Wasm/WebAssembly with Virtual Dom Dodrio"
repository = "https://github.com/LucianoBestia/mem2"
readme = "README.md"
license = "MIT"
keywords = ["wasm","dodrio","virtual dom"]
categories = ["game","learning"]

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
dodrio = "0.1.0"
wasm-bindgen = "0.2.40"
console_error_panic_hook = "0.1.6"
#for rand to work with wasm I found the clarification on this tutorial 
#https://medium.com/@rossharrison/generating-sudoku-boards-pt-3-rust-for-webassembly-85bd7294c34a
rand = { version = "0.6", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.16"
features = [
  "console",
  "Document",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlImageElement",
  "HtmlAudioElement",
  "HtmlMediaElement",
  "MouseEvent",
  "Node",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.40"
