[package]
name = "mem2"
version = "1.0.2"
authors = ["Luciano Furlan <Luciano.Bestia@gmail.com>"]
edition = "2018"
description = "Learning Rust Wasm/WebAssembly with Virtual Dom Dodrio"
repository = "https://github.com/LucianoBestia/mem2"
readme = "README.md"
license = "MIT"
keywords = ["wasm","dodrio","virtual dom"]
categories = ["game","learning"]

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
dodrio = "0.1.0"
wasm-bindgen = "0.2.42"
console_error_panic_hook = "0.1.6"
rand = { version = "0.6", features = ["wasm-bindgen"] }
js-sys = "0.3"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0"
futures = "0.1.26"
wasm-bindgen-futures = "0.3.19"
log = "0.4.6"
strum = "0.15.0"
strum_macros = "0.15.0"

[dependencies.web-sys]
version = "0.3.19"
features = [
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Event",
  "EventListener",
  "EventTarget",
  "FormData",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlImageElement",
  "HtmlAudioElement",
  "HtmlMediaElement",
  "Location",
  "MouseEvent",
  "Node",
  "WebSocket",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.42"
