[package]
name = "mem2"
version = "1.0.2"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
description = "Learning Rust Wasm/WebAssembly with Virtual Dom Dodrio"
repository = "https://github.com/bestia-dev/mem2"
readme = "README.md"
license = "MIT"
keywords = ["wasm","dodrio","virtual dom"]
categories = ["game","learning"]
publish = false

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
dodrio = "0.1.0"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
rand = { version = "0.6", features = ["wasm-bindgen"] }
js-sys = "0.3"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0"
futures = "0.1.26"
wasm-bindgen-futures = "0.3.20"
log = "0.4.6"
strum = "0.15.0"
strum_macros = "0.15.0"

[dependencies.web-sys]
version = "0.3.28"
features = [
  "AbortController",
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Event",
  "EventListener",
  "EventTarget",
  "FormData",
  "Headers",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlImageElement",
  "HtmlAudioElement",
  "HtmlMediaElement",
  "Location",
  "MouseEvent",
  "Node",
  "ReferrerPolicy",
  "Request",
  "RequestCache",
  "RequestCredentials",
  "RequestInit",
  "RequestMode",
  "RequestRedirect",
  "Response",
  "Storage",
  "WebSocket",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.43"
